<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="50"
            android:text="@string/personQuery"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/txtPerson"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="50"
            android:ems="9"
            android:hint="@string/personQuery"
            android:imeOptions="actionNext"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="70"
            android:text="@string/queryPhone"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/txtPhone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="30"
            android:ems="7"
            android:hint="@string/queryPhone"
            android:imeOptions="actionDone"
            android:inputType="phone" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:gravity="right"
        android:weightSum="100" >

        <Button
            android:id="@+id/btnContacts"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginLeft="5dp"
            android:layout_weight="50.10"
            android:background="@drawable/rounded_btn_background"
            android:onClick="doLaunchContactPicker"
            android:text="@string/contacts"
            android:textColor="#575757" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_gravity="right"
            android:layout_marginLeft="5dp"
            android:layout_weight="28.39"
            android:background="@drawable/rounded_btn_background"
            android:text="@string/save"
            android:textColor="#575757" />
    </LinearLayout>

</LinearLayout>