<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/advertisement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.14" >

        <TableLayout
            android:id="@+id/queryTableLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:stretchColumns="*" >
        </TableLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btnViewItems"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="15dp"
            android:layout_weight="30"
            android:background="@drawable/rounded_btn_background"
            android:text="@string/txtViewItems"
            android:textColor="#575757" />

        <Button
            android:id="@+id/btnLendItem"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="15dp"
            android:layout_weight="30"
            android:background="@drawable/rounded_btn_background"
            android:text="@string/txtAssign"
            android:textColor="#575757" />

        <Button
            android:id="@+id/btnViewPeople"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="15dp"
            android:layout_weight="30"
            android:background="@drawable/rounded_btn_background"
            android:text="@string/txtViewPeople"
            android:textColor="#575757" />
    </LinearLayout>

</LinearLayout>